@@ -1,14 +1,16 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
+DIST rails_best_practices-0.10.0.gem 50176 RMD160 9c6b9ac049fea9e3e7ca8034f99d71ec0b003f3f SHA1 606d114327423787a8d8274816c120ce1994c4d5 SHA256 b2f328aa51d645b9d15b430ed773b8d87bafca3e67e948f05a70a005f212e749
 DIST rails_best_practices-0.9.0.gem 49664 RMD160 141173c00b9e1b50a7cd383cc8b9c5e4f691dfdb SHA1 b54fe05bdb77307a6a51a818ce0e2287c76e4a7e SHA256 37d1c19d13ed1c917316be85c70435bd9b3f1c7e0fb9d510ff61ec6bea17df26
+EBUILD rails_best_practices-0.10.0.ebuild 781 RMD160 fbbd5bae9c48606fe52fa1f847fc16833a756856 SHA1 b001bf61b26cd7b938be7470cc35e0a8cdc53c5d SHA256 2d6fbfdc21bf04801acf2dfae5a3cdad9c1db210863231bbd51b6e9cfb055883
 EBUILD rails_best_practices-0.9.0.ebuild 881 RMD160 c70437e00146aaf2c080543174b5c7637bed1c52 SHA1 03544591fee210a66308de80cbced193e563f360 SHA256 6782302778f7ef903a8234672c111400fc6a421bfe5dcdcfbc2d091d59178a5c
-MISC ChangeLog 1628 RMD160 131905b7f43d9ac9b246f4bc1bca0ee6a2ba7f11 SHA1 d3f66029d856447eaa7f378a5fab5961141ba18c SHA256 8927dc3ab9e19d918ab4cc7bf0f827adeb34b6f2e409e73b93523a81470e2465
+MISC ChangeLog 1778 RMD160 2b2a169341d07372a195b98e62afe36e6271358c SHA1 474ae09460a5def6f031749288c1522a998c9b0a SHA256 3004f0c3bdcc6b6ffa2b05bcdf236ca684278bb684236a0d2bc0705caddc2783
 MISC metadata.xml 201 RMD160 bbf7920d9809941fb024d20016dbe2fb9f15ff97 SHA1 e629d21795e99a77bd0a6aded1a153fd12d5b2c5 SHA256 c90b12c6600840878686d4544dbc51d97b0715add76b40d9400415cdef6324ad
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAk33QKgACgkQrnu0mw69Jkp4zwD/Snq6SaSolXP//vamtfz+yUVc
-7bkg+1H43VFz1pMWbo4BAI48flQHpHZg8jVcLukzE9T5Yfgu2wrCP73JsMfUKD3F
-=0ggX
+iF4EAREIAAYFAk4XBY0ACgkQiIP6VqMIqNfFpwD+OtDJWAv5mReCv4esjmxPoJRq
++J30J2DLASxq/hMaJP8BAJeuYY0OZWlCGX/5qBUnLdBCmTh5YvjOwjEWxYPf5Bj0
+=ak6M
 -----END PGP SIGNATURE-----
