@@ -2,6 +2,12 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*rails_best_practices-0.10.0 (08 Jul 2011)
+
+  08 Jul 2011; Hans de Graaff <graaff@gentoo.org>
+  +rails_best_practices-0.10.0.ebuild:
+  Version bump.
+
   14 Jun 2011; Hans de Graaff <graaff@gentoo.org>
   rails_best_practices-0.9.0.ebuild:
   Add x86 keyword.
